# actnet

./: .gitignore  Cargo.toml  README.md  it-looks-like.md
device/: Cargo.toml  README.md  build.rs
device-api/: Cargo.toml
device-api/src/: ext.rs  lib.rs  log.rs  ops.rs
device-cuda/: .gitignore  Cargo.toml  README.md
device-cuda/cu-bind/: Cargo.toml  cublas.rs  cuda-driver.rs  cuda-rt.rs
device-cuda/cu-src/: test-case-1.cu  test-case-2.cu
device-cuda/cu-target/: basic-flop.ptx  test-case-1.ptx
device-cuda/cu-util/: print-arch.cu  print-arch.exp
device-cuda/src/: lib.rs
device-cuda/src/cuda_bundle/: mod.rs
device-cuda/src/cuda_stream/: datbox.rs  datbuf.rs  devbox.rs  mod.rs  stream.rs
device-cuda/src/cuda_wrap/: mod.rs  zk.rs
device-cuda/src/dev/: err.rs  jit.rs  keeper.rs  mod.rs  stream.rs  zk.rs
device-cuda/src/mem/: mod.rs  slot_vec.rs
device-cuda/src/raw/: blas.rs  drv.rs  mod.rs  rt.rs  wrap_cuda_driver.rs
device-toy/: Cargo.toml  README.md
device-toy/src/: datbox.rs  datbuf.rs  lib.rs  ops.rs  symbol.rs
device/src/: devapi.rs  devcli.rs  lib.rs
device/src/cuda_local_uni/: error.rs  mod.rs  rawcuda.rs  rcver.rs  snder.rs  state.rs
device/src/cuda_physic/: mod.rs  rawcuda.rs  taskpool.rs
device/src/cuda_util/: cuda.rs  mod.rs  raw_module.rs  raw_stream.rs
device/src/cuda_util/ops/: add-sub-mul-div.cu  contract.cu
device/src/cuda_util/ops_meta/: write-add-sub-mul-div.py
device/src/mem_tool/: mod.rs  simple_state.rs
device/src/mem_util/: mod.rs  simple_state.rs
device/src/toy_uni/: mod.rs
dv-api/: Cargo.toml
dv-api/src/: dev.rs  err.rs  exp.rs  ext.rs  lib.rs  log.rs  mrg.rs  ops.rs  typ.rs
dv-cuda/: Cargo.toml  log
dv-cuda/cu-bind/: Cargo.toml
dv-cuda/cu-bind/src/: drv.rs  lib.rs  rt.rs
dv-cuda/cu-src/: elem.cu  elem.flag
dv-cuda/cu-target/: elem_add_f32.ptx  elem_add_f64.ptx  elem_add_i32.ptx  elem_add_i64.ptx  elem_div_f32.ptx  elem_div_f64.ptx  elem_div_i32.ptx  elem_div_i64.ptx  elem_mul_f32.ptx  elem_mul_f64.ptx  elem_mul_i32.ptx  elem_mul_i64.ptx  elem_sub_f32.ptx  elem_sub_f64.ptx  elem_sub_i32.ptx  elem_sub_i64.ptx  test-case-2.ptx
dv-cuda/cu-util/: print-arch.lib
dv-cuda/src/: lib.rs
dv-cuda/src/cuda_device/: mod.rs
dv-cuda/src/cuda_stream/: mod.rs  stream.rs
dv-cuda/src/tool/: jit.rs  mod.rs  stream.rs  thrdkp.rs
dv-toy/: Cargo.toml  README.md
dv-toy/src/: datbox.rs  lib.rs  ops.rs  symbol.rs
dv-toy/src/ops/: _rand.rs  copy.rs  elem.rs  gemm.rs  init.rs  mod.rs
ir-linajbr/: Cargo.toml  build.rs
ir-linajbr-core/: Cargo.toml  README.md
ir-linajbr-core/src/: interface_parse.lalrpop  interface_parse.rs  lib.rs  syntax.rs
ir-linajbr-core/src/dataflow/: mod.rs
ir-linajbr-core/src/denaming/: mod.rs
ir-linajbr-macro/: Cargo.toml
ir-linajbr-macro/src/: lib.rs
ir-linajbr/src/: lib.rs
ir-linajbr/src/binding/: mod.rs
ir-linajbr/src/syntax/: mod.rs  syntax.rs  syntax_rule.lalrpop  syntax_rule.rs
ir-linajbr/test/: main.rs
ir-ndexp/: Cargo.toml
ir-ndexp/src/: lib.rs
mem-allocator/: Cargo.toml
mem-allocator/src/: lib.rs
mem-slotvec/: Cargo.toml
mem-slotvec/src/: lib.rs
mem-tgraph/: Cargo.toml  README.md
mem-tgraph/src/: lib.rs
mem-tstack/: Cargo.toml  README.md
mltk-ndarray/: Cargo.toml
mltk-ndarray/src/ops/: mod.rs
mltk-tensor/: Cargo.toml
mltk-tensor/src/: lib.rs
mm-alloc/: Cargo.toml
mm-alloc/src/: lib.rs
mm-api/: Cargo.toml
mm-api/src/: lib.rs
mm-slotvec/: Cargo.toml
mm-tgraph/: Cargo.toml  README.md
mm-tgraph/src/: lib.rs
mm-tstack/: Cargo.toml  README.md
ndarray/: Cargo.toml
ndarray/src/: display.rs  lib.rs
ndarray/src/death/: drop.rs  dump.rs
ndarray/src/ops/: init.rs  mod.rs
ndops/: Cargo.toml
rt-cuda/: Cargo.toml
rt-interpret/: Cargo.toml
sctk-ndarray/: Cargo.toml  README.md
sctk-ndarray/src/: display.rs  dvtst.rs  fmt.rs  lib.rs  marker.rs
sctk-ndarray/src/cast/: mod.rs
sctk-ndarray/src/death/: mod.rs
sctk-ndarray/src/ops/: bit.rs  clone.rs  elem.rs  elementary.rs  gemm.rs  init.rs  lalg.rs  mod.rs  ord.rs
sctk-neural-net/: Cargo.toml
sctk-tensor/: Cargo.toml
sctk-tensor/src/: lib.rs
src/: lib.rs
tensor/: Cargo.toml
util/construct-str-repr/: Cargo.toml
util/construct-str-repr-core/: Cargo.toml
util/construct-str-repr-core/src/: lib.rs
util/construct-str-repr-derive/: Cargo.toml
util/construct-str-repr-derive/src/: lib.rs  make_body.rs
util/construct-str-repr/src/: lib.rs
util/construct-str-repr/test/: 1-bare-struct.rs  2-bare-enum.rs  3-generic-struct.rs  4-generic-enum.rs  5-with-attrs.rs  main.rs
