[package]
name = "device-toy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_api = {package="device-api", version="*", path="../device-api"}
rand = "0.8.5"              # Random number generators and other randomness functionality. 


[profile.dev]
opt-level = 1               # Use slightly better optimizations.

[profile.release]
strip = "debuginfo"
