[package]
name = "ir-linajbr"
version = "0.1.0"
edition = "2021"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ir-linajbr-macro = {path="../ir-linajbr-macro"}
ir-linajbr-core  = {path="../ir-linajbr-core"}

[[test]]
path = "test/main.rs"
name = "test"

[dev-dependencies]
trybuild = {version="1.0.77", features=["diff"]}