[package]
name = "mem-allocator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotvec = {package="mem-slotvec", version="*", path="../mem-slotvec"}
device_api = {package="device-api", version="*", path="../device-api"}

[dev-dependencies]
rand = "0.8.5"              # Random number generators and other randomness functionality. 