[package]
name = "mem-tgraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotvec = {package="mem-slotvec", version="*", path="../mem-slotvec"}
device_api = {package="device-api", version="*", path="../device-api"}