[package]
name = "ndarray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_api = {package="device-api", path="../device-api", version="*"}

[dev-dependencies]
device_toy = {package="device-toy", path="../device-toy", version="*"}