[package]
name = "sctk-ndarray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dvapi = {package="dv-api", path="../dv-api", version="*"}

[dev-dependencies]
dvtoy = {package="dv-toy", path="../dv-toy", version="*"}