[package]
name = "cu-bind"
version = "0.1.0"
edition = "2021"
build="build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.62.0"          # Automatically generates Rust FFI bindings to C and C++ libraries.

[profile.dev]
incremental = true

[profile.test]
incremental = true
